--- a/StellaVisualizer/MainWindow.xaml
+++ b/StellaVisualizer/MainWindow.xaml
@@ -23,6 +23,7 @@
             <RowDefinition Height="*" MaxHeight="50"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*" MaxHeight="50"/>
+            <RowDefinition Height="*" MaxHeight="50"/>
         </Grid.RowDefinitions>
 
         <ContentPresenter Grid.Row="0" Margin="0,0,0,5" Content="{Binding LedStripViewModels[0]}"/>
@@ -44,6 +45,18 @@
             <Button Content="Play" Grid.Column="2" Click="PlayButton_OnClick"/>
             <Button Content="Pause" Grid.Column="3" Click="PauseButton_OnClick"/>
             <Button Content="&gt;" Grid.Column="4" Click="NextFrameButton_OnClick"/>
+        </Grid>
+
+        <Grid Grid.Row="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+                
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Content="Set" Grid.Column="1" Click="SetButton_OnClick"/>
+           
         </Grid>
 
 
