--- a/StellaVisualizer/Windows/NewAnimationWindow.xaml
+++ b/StellaVisualizer/Windows/NewAnimationWindow.xaml
@@ -16,6 +16,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
