--- a/StellaVisualizer/Windows/NewAnimationWindow.xaml
+++ b/StellaVisualizer/Windows/NewAnimationWindow.xaml
@@ -5,9 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellaVisualizer"
         xmlns:viewModels="clr-namespace:StellaVisualizer.ViewModels"
+        xmlns:controls="clr-namespace:StellaVisualizer.Controls"
         mc:Ignorable="d"
         Title="NewAnimationWindow" Height="450" Width="800"
         d:DataContext="{d:DesignInstance viewModels:NewAnimationWindowViewModel}">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModels:PatternViewModel}">
+            <controls:PatternControl/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="80"/>
@@ -15,6 +21,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition/>
@@ -25,6 +32,19 @@
 
         <TextBlock Grid.Column="0" Grid.Row="1" Text="WaitMS : "/>
         <TextBox   Grid.Column="1" Grid.Row="1" Text="{Binding WaitMS}"/>
+
+        <TextBlock  Grid.Column="0" Grid.Row="2"  Text="Pattern : "/>
+        <Button    Grid.Column="1" Grid.Row="2"  Content="Add" Click="AddPatternButton_OnClick"/>
+
+        <ItemsControl Grid.Column="2" Grid.Row="2" ItemsSource="{Binding PatternViewModels}" HorizontalContentAlignment="Left" HorizontalAlignment="Left">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+
+
 
     </Grid>
 </Window>
