--- a/StellaVisualizer/Windows/NewAnimationWindow.xaml
+++ b/StellaVisualizer/Windows/NewAnimationWindow.xaml
@@ -24,7 +24,8 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="35"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Draw method : "/>
@@ -42,8 +43,9 @@
                     <StackPanel Orientation="Horizontal"/>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
-            
         </ListView>
-            
+
+        <Button  Grid.Column="2" Grid.Row="4"  Content="Create animation" Click="CreateAnimationButton_OnClick"/>
+
     </Grid>
 </Window>
