--- a/StellaVisualizer/Controls/LedStrip.xaml
+++ b/StellaVisualizer/Controls/LedStrip.xaml
@@ -7,6 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:LedStripViewModel}">
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type viewModels:PixelViewModel}">
+            <Grid Background="{Binding SolidColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+
+
+            </Grid>
+            <!--<Border Background="{Binding SolidColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="10"/>-->
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30"/>
@@ -19,7 +28,33 @@
 
         <TextBlock Grid.Column="2" Text="{Binding Animation.Count, TargetNullValue='0', FallbackValue='0'}" Foreground="WhiteSmoke"/>
 
-        <UniformGrid Grid.Column="4" Name="UniformGrid"/>
+        <ListBox Grid.Column="4" ItemsSource="{Binding PixelViewModels}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="white"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid IsItemsHost="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Rows="1">
+                        <UniformGrid.Style>
+                            <Style TargetType="UniformGrid"></Style>
+                        </UniformGrid.Style>
+                    </UniformGrid>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <ContentPresenter Content="{Binding}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    <Setter Property="Padding" Value="0"/>
+                    <Setter Property="Margin" Value="-1 "/>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
     </Grid>
 
 </UserControl>
