--- a/StellaVisualizer/Windows/NewAnimationWindow.xaml
+++ b/StellaVisualizer/Windows/NewAnimationWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:viewModels="clr-namespace:StellaVisualizer.ViewModels"
         xmlns:controls="clr-namespace:StellaVisualizer.Controls"
         mc:Ignorable="d"
-        Title="NewAnimationWindow" Height="450" Width="800"
+        Title="NewAnimatorWindow" Height="450" Width="800"
         d:DataContext="{d:DesignInstance viewModels:NewAnimationWindowViewModel}">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewModels:PatternViewModel}">
@@ -61,8 +61,8 @@
 
         <StackPanel Grid.Column="2" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,2">
 
-        <Button Content="Store animation"  Click="StoreAnimationButton_OnClick" Margin="10,0" IsEnabled="False"/>
-        <Button Content="Create animation" Click="CreateAnimationButton_OnClick"/>
+        <Button Content="Store animator"  Click="StoreAnimationButton_OnClick" Margin="10,0" IsEnabled="False"/>
+        <Button Content="Create animator" Click="CreateAnimationButton_OnClick"/>
         </StackPanel>
 
 
