--- a/StellaVisualizer/Controls/LedStrip.xaml
+++ b/StellaVisualizer/Controls/LedStrip.xaml
@@ -7,21 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:LedStripViewModel}">
-    <UserControl.Resources>
-        <DataTemplate DataType="{x:Type viewModels:PixelViewModel}">
-            <Grid Background="{Binding SolidColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
-        </DataTemplate>
-    </UserControl.Resources>
-        <ListBox  ItemsSource="{Binding PixelViewModels}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Red" BorderThickness="0" Height="10"
+    <!--Childs are set in code behind-->
+    <UniformGrid Name="TheGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Rows="1"/>
+
+    <!--<ListBox  ItemsSource="{Binding PixelViewModels}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Red" BorderThickness="0" Height="10"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"
                      VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid IsItemsHost="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Rows="1">
-                        <UniformGrid.Style>
-                            <Style TargetType="UniformGrid"></Style>
-                        </UniformGrid.Style>
-                    </UniformGrid>
+                   
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
 
@@ -38,5 +32,5 @@
                     <Setter Property="Margin" Value="-1 "/>
                 </Style>
             </ListBox.ItemContainerStyle>
-        </ListBox>
+        </ListBox>-->
 </UserControl>
