--- a/StellaWebInterface/frontend/styles/configurationPage.css
+++ b/StellaWebInterface/frontend/styles/configurationPage.css
@@ -1,3 +1,12 @@
+.rnd-resizable1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 1px #ddd;
+    background: #f0f0f0;
+    z-index: 10
+}
+
 .rnd-resizable1 .resize-handle-base-class {
     border: 1px solid #25A7FB;
     border-radius: 50%;
