--- a/StellaVisualizer/Windows/NewAnimationWindow.xaml
+++ b/StellaVisualizer/Windows/NewAnimationWindow.xaml
@@ -58,7 +58,9 @@
 
 
         <TextBlock Grid.Column="0" Grid.Row="4" Text="Image path: "/>
-        <TextBox   Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Text="{Binding ImagePath}"/>
+        <TextBox   Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Text="{Binding ImageDir, UpdateSourceTrigger=PropertyChanged}"/>
+        <ComboBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2"  ItemsSource="{Binding Images}" SelectedItem="{Binding SelectedImage, UpdateSourceTrigger=PropertyChanged}"></ComboBox>
+
 
 
         <StackPanel Grid.Column="2" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,2">
