--- a/StellaVisualizer/App.xaml
+++ b/StellaVisualizer/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="StellaTestSuite.App"
+﻿<Application x:Class="StellaVisualizer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StellaTestSuite"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
