--- a/StellaVisualizer/Client/ClientViewerControl.xaml
+++ b/StellaVisualizer/Client/ClientViewerControl.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="StellaTestSuite.Client.ClientViewerControl"
+﻿<UserControl x:Class="StellaVisualizer.Client.ClientViewerControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StellaTestSuite.Client"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              d:DataContext="{d:DesignInstance local:ClientViewerViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
