--- a/StellaVisualizer/Server/ServerConfigurationControl.xaml
+++ b/StellaVisualizer/Server/ServerConfigurationControl.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="StellaTestSuite.Server.ServerConfigurationControl"
+﻿<UserControl x:Class="StellaVisualizer.Server.ServerConfigurationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StellaTestSuite.Server"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              d:DataContext="{d:DesignInstance local:ServerConfigurationViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
