--- a/StellaVisualizer/Server/ServerControl.xaml
+++ b/StellaVisualizer/Server/ServerControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="StellaTestSuite.Server.ServerControl"
+﻿<UserControl x:Class="StellaVisualizer.Server.ServerControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:server="clr-namespace:StellaTestSuite.Server"
-             xmlns:stellaTestSuite="clr-namespace:StellaTestSuite"
+             xmlns:server="clr-namespace:StellaVisualizer.Server"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance server:ServerControlViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
