--- a/StellaVisualizer/Client/ClientViewerControl.xaml
+++ b/StellaVisualizer/Client/ClientViewerControl.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             d:DataContext="{d:DesignInstance local:ClientViewerViewModel}"
+             xmlns:client="clr-namespace:StellaVisualizer.Client"
+             d:DataContext="{d:DesignInstance client:ClientViewerViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
     <UniformGrid Rows="1" Columns="2" >
