--- a/StellaServer/MainWindow.xaml
+++ b/StellaServer/MainWindow.xaml
@@ -4,9 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellaServer"
+        xmlns:serverConfiguration="clr-namespace:StellaServer.ServerConfiguration"
+        xmlns:stellaServer="clr-namespace:StellaServer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="800"
+        d:DataContext="{d:DesignInstance local:MainWindowViewModel}">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type serverConfiguration:ServerConfigurationViewModel}">
+            <serverConfiguration:ServerConfigurationControl/>
+        </DataTemplate>
+    </Window.Resources>
 
+    <Grid>
+        <ContentControl Content="{Binding SeverConfigurationViewModel}"/>
     </Grid>
 </Window>
