--- a/StellaServer/ServerConfiguration/ServerConfigurationControl.xaml
+++ b/StellaServer/ServerConfiguration/ServerConfigurationControl.xaml
@@ -16,8 +16,9 @@
             <Grid>
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
@@ -35,6 +36,7 @@
                          Grid.Column="1"
                          Grid.Row="0"/>
 
+
                 <TextBlock Text="port"
                            Grid.Column="0"
                            Grid.Row="1"/>
@@ -48,6 +50,10 @@
                 <TextBox Text="{Binding MappingFilePath}"
                          Grid.Column="1"
                          Grid.Row="2"/>
+                <Button Grid.Column="2"
+                        Grid.Row="2"
+                        Content="Browse"
+                        Command="{Binding BrowseToMappingFileCommand}"/>
 
                 <TextBlock Text="Storyboard folder"
                            Grid.Column="0"
@@ -55,6 +61,10 @@
                 <TextBox Text="{Binding StoryboardFolderPath}"
                          Grid.Column="1"
                          Grid.Row="3"/>
+                <Button Grid.Column="2"
+                        Grid.Row="3"
+                        Content="Browse"
+                        Command="{Binding BrowseToStoryboardFolderPathCommand}"/>
 
                 <TextBlock Text="Bitmap folder"
                            Grid.Column="0"
@@ -62,6 +72,10 @@
                 <TextBox Text="{Binding BitmapFolderPath}"
                          Grid.Column="1"
                          Grid.Row="4"/>
+                <Button Grid.Column="2"
+                        Grid.Row="4"
+                        Content="Browse"
+                        Command="{Binding BrowseToBitmapFolderPathCommand}"/>
             </Grid>
         </StackPanel>
 
