--- a/StellaServer/AnimationsPanel.xaml
+++ b/StellaServer/AnimationsPanel.xaml
@@ -9,8 +9,28 @@
              xmlns:reactiveUi="http://reactiveui.net"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-        <UniformGrid>
-            <TextBox x:Name="BitmapFolderTextBox"/>
-            <ListView x:Name="BitmapsListBox"/>
-        </UniformGrid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="Bitmap folder:"/>
+            <TextBox   Grid.Column="1" Grid.Row="0" x:Name="BitmapFolderTextBox"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="Available bitmaps:"/>
+
+
+            <ListView Grid.Column="1" Grid.Row="1" x:Name="BitmapsPanel" >
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid ClipToBounds="True" />
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+            </ListView>
+        </Grid>
 </reactiveUi:ReactiveUserControl>
