--- a/StellaServer/MainWindow.xaml
+++ b/StellaServer/MainWindow.xaml
@@ -8,6 +8,12 @@
         xmlns:local="clr-namespace:StellaServer"
         xmlns:reactiveUi="http://reactiveui.net"
         mc:Ignorable="d"
+       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+       Background="{DynamicResource MaterialDesignPaper}"
+       TextElement.FontWeight="Medium"
+       TextElement.FontSize="14"
+       FontFamily="{materialDesign:MaterialDesignFont}"
         Title="MainWindow" Height="450" Width="800">
     <UniformGrid>
         <local:AnimationsPanel x:Name="AnimationsPanel"/>
